finished with '98, started '97. cleaned up '01

--- a/Data/Monarchs_1997_cleanup.ipynb
+++ b/Data/Monarchs_1997_cleanup.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect(\"Monarchs1998.db\")"
+    "db = sqlite3.connect(\"Monarchs1997.db\")"
    ]
   },
   {
@@ -37,10 +37,10 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"1998 Season Summary.csv\")\n",
+    "df = pd.read_csv(\"1997 Season Summary.csv\")\n",
     "\n",
     "        #convert pandas to SQL table\n",
-    "df.to_sql(\"monarchs1998\", db, if_exists=\"replace\")\n",
+    "df.to_sql(\"monarchs1997\", db, if_exists=\"replace\")\n",
     "\n",
     "os.getcwd()"
    ]
@@ -265,7 +265,7 @@
     }
    ],
    "source": [
-    "data_type = pd.read_sql('SELECT * FROM PRAGMA_TABLE_INFO(\"monarchs1998\")', db)\n",
+    "data_type = pd.read_sql('SELECT * FROM PRAGMA_TABLE_INFO(\"monarchs1997\")', db)\n",
     "data_type"
    ]
   },
@@ -1445,7 +1445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_csv(\"Monarchs1998.csv\")"
+    "#new_table.to_csv(\"Monarchs1997.csv\")"
    ]
   }
  ],
