--- a/Data/Monarchs_2001_cleanup.ipynb
+++ b/Data/Monarchs_2001_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,13 +50,12 @@
     "        #convert pandas to SQL table\n",
     "df.to_sql(\"monarchs2001\", db, if_exists=\"replace\")\n",
     "\n",
-    "os.getcwd()\n",
-    "\n"
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,52 +92,32 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs2001_index</td>\n",
        "      <td>monarchs2001</td>\n",
-       "      <td>63</td>\n",
+       "      <td>3</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs2001_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>index</td>\n",
-       "      <td>ix_monarchs_2001_index</td>\n",
-       "      <td>monarchs_2001</td>\n",
-       "      <td>3</td>\n",
-       "      <td>CREATE INDEX \"ix_monarchs_2001_index\"ON \"monar...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>table</td>\n",
        "      <td>monarchs2001</td>\n",
        "      <td>monarchs2001</td>\n",
-       "      <td>62</td>\n",
-       "      <td>CREATE TABLE \"monarchs2001\" (\\n\"index\" INTEGER...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>table</td>\n",
-       "      <td>monarchs_2001</td>\n",
-       "      <td>monarchs_2001</td>\n",
        "      <td>2</td>\n",
-       "      <td>CREATE TABLE \"monarchs_2001\" (\\n\"index\" INTEGE...</td>\n",
+       "      <td>CREATE TABLE \"monarchs2001\" (\\n\"index\" INTEGER...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    type                    name       tbl_name  rootpage  \\\n",
-       "0  index   ix_monarchs2001_index   monarchs2001        63   \n",
-       "1  index  ix_monarchs_2001_index  monarchs_2001         3   \n",
-       "2  table            monarchs2001   monarchs2001        62   \n",
-       "3  table           monarchs_2001  monarchs_2001         2   \n",
+       "    type                   name      tbl_name  rootpage  \\\n",
+       "0  index  ix_monarchs2001_index  monarchs2001         3   \n",
+       "1  table           monarchs2001  monarchs2001         2   \n",
        "\n",
        "                                                 sql  \n",
        "0  CREATE INDEX \"ix_monarchs2001_index\"ON \"monarc...  \n",
-       "1  CREATE INDEX \"ix_monarchs_2001_index\"ON \"monar...  \n",
-       "2  CREATE TABLE \"monarchs2001\" (\\n\"index\" INTEGER...  \n",
-       "3  CREATE TABLE \"monarchs_2001\" (\\n\"index\" INTEGE...  "
+       "1  CREATE TABLE \"monarchs2001\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +247,7 @@
        "6    6                  Miles     REAL        0       None   0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +409,7 @@
        "[1962 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +571,7 @@
        "[1962 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +696,7 @@
        "[1962 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,136 +718,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>city_date</th>\n",
-       "      <th>Report State</th>\n",
-       "      <th>Report Country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>02-11-02 El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>03-08-02 Sierra Chincua</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>03-13-02 El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>02-27-02 El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>03-13-02 El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1957</th>\n",
-       "      <td>10-06-01 Lakeville</td>\n",
-       "      <td>MN</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958</th>\n",
-       "      <td>03-08-02 Sierra Chincua</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959</th>\n",
-       "      <td>02-26-02 El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960</th>\n",
-       "      <td>02-26-02 El Rosario</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1961</th>\n",
-       "      <td>09-16-01 Guilford</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1962 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    city_date Report State Report Country\n",
-       "0         02-11-02 El Rosario         MICH             MX\n",
-       "1     03-08-02 Sierra Chincua         MICH             MX\n",
-       "2         03-13-02 El Rosario         MICH             MX\n",
-       "3         02-27-02 El Rosario         MICH             MX\n",
-       "4         03-13-02 El Rosario         MICH             MX\n",
-       "...                       ...          ...            ...\n",
-       "1957       10-06-01 Lakeville           MN           None\n",
-       "1958  03-08-02 Sierra Chincua         MICH             MX\n",
-       "1959      02-26-02 El Rosario         MICH             MX\n",
-       "1960      02-26-02 El Rosario         MICH             MX\n",
-       "1961        09-16-01 Guilford           CT           None\n",
-       "\n",
-       "[1962 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df4 = df['report_date'].str.split(', ', expand=True)\n",
     "df5 = df4[0].str.extract('(\\d\\d-\\d\\d-\\d\\d)', expand=True)\n",
-    "#df6 = df4[0].str.replace('(\\d\\d-\\d\\d-\\d\\d)', '') - to seperate date from city. decided not to use city\n",
+    "#df6 = df4[0].str.replace('(\\d\\d-\\d\\d-\\d\\d)', '')- to seperate date from city. decided not to use city\n",
     "df4.columns = ['city_date', 'Report State', 'Report Country']\n",
-    "df5.columns = ['Report Date']\n",
-    "df4"
+    "df5.columns = ['Report Date']"
    ]
   },
   {
@@ -899,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +936,7 @@
        "[1962 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1128,7 @@
        "[1962 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
