--- a/Data/Monarchs_1998_cleanup.ipynb
+++ b/Data/Monarchs_1998_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2712: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
+      "  method=method,\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +117,7 @@
        "1  CREATE TABLE \"monarchs1998\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +267,7 @@
        "8    8               Miles     TEXT        0       None   0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +440,7 @@
        "[459 rows x 6 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +581,7 @@
        "[459 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +707,7 @@
        "[459 rows x 2 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +822,7 @@
        "[459 rows x 1 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1027,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rename values in Report Country column"
+    "### Change Values in Report Date where day of month is missing\n",
+    "#### I chose 09/01/08 because season starts in August, and the average Tag date is in September"
    ]
   },
   {
@@ -1196,193 +1205,6 @@
     }
    ],
    "source": [
-    "new_table.loc[new_table['Report Country'] == 'MX', 'Report Country'] = 'MEXICO'\n",
-    "new_table.loc[new_table['Report Country'].isnull(), 'Report Country'] = 'USA'\n",
-    "new_table"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Change Values in Report Date where day of month is missing\n",
-    "#### I chose 09/01/08 because season starts in August, and the average Tag date is in September"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tag No.</th>\n",
-       "      <th>Tag State</th>\n",
-       "      <th>Tag Date</th>\n",
-       "      <th>Report State</th>\n",
-       "      <th>Report Country</th>\n",
-       "      <th>Report Date</th>\n",
-       "      <th>Miles</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>XA226</td>\n",
-       "      <td>WI</td>\n",
-       "      <td>09/25/98</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>04/06/99</td>\n",
-       "      <td>1814</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>WJ990</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>08/29/98</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>03/01/99</td>\n",
-       "      <td>2231</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>BG365</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>09/03/98</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>02/10/99</td>\n",
-       "      <td>2199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>WK478</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>09/21/98</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>02/17/99</td>\n",
-       "      <td>2186</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>WK499</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>09/26/98</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>04/05/99</td>\n",
-       "      <td>2186</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>454</th>\n",
-       "      <td>DA348</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>03/01/99</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>455</th>\n",
-       "      <td>DA382</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>03/01/99</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>456</th>\n",
-       "      <td>NK076</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>02/10/99</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>457</th>\n",
-       "      <td>SK300</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>02/19/99</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>458</th>\n",
-       "      <td>CB963</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>04/05/99</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>459 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Tag No. Tag State  Tag Date Report State Report Country Report Date Miles\n",
-       "0     XA226        WI  09/25/98           TX            USA    04/06/99  1814\n",
-       "1     WJ990        CT  08/29/98         MICH         MEXICO    03/01/99  2231\n",
-       "2     BG365        CT  09/03/98         MICH         MEXICO    02/10/99  2199\n",
-       "3     WK478        CT  09/21/98         MICH         MEXICO    02/17/99  2186\n",
-       "4     WK499        CT  09/26/98         MICH         MEXICO    04/05/99  2186\n",
-       "..      ...       ...       ...          ...            ...         ...   ...\n",
-       "454   DA348       NaN       NaN         MICH         MEXICO    03/01/99   NaN\n",
-       "455   DA382       NaN       NaN         MICH         MEXICO    03/01/99   NaN\n",
-       "456   NK076       NaN       NaN         MICH         MEXICO    02/10/99   NaN\n",
-       "457   SK300       NaN       NaN         MICH         MEXICO    02/19/99   NaN\n",
-       "458   CB963       NaN       NaN         MICH         MEXICO    04/05/99   NaN\n",
-       "\n",
-       "[459 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "new_table.loc[new_table['Tag Date'] == \"98 Season\", 'Tag Date'] = '09/01/08'\n",
     "new_table"
    ]
@@ -1396,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1234,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
