checked for white space on all previous completions

--- a/Data/Monarchs_1997_cleanup.ipynb
+++ b/Data/Monarchs_1997_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,24 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2712: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
-      "  method=method,\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +109,7 @@
        "1  CREATE TABLE \"monarchs1997\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +279,7 @@
        "10   10            Est. Distance     REAL        0       None   0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +465,7 @@
        "[103 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +606,7 @@
        "[103 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,6 +614,8 @@
    "source": [
     "df2 = df['Where Tagged'].str.split(',', expand=True)\n",
     "df2.columns = ['tag_city', 'Tag State']\n",
+    "#df2.loc[df2['Tag State'].str.contains(r'\\s'), 'Tag State'].value_counts() #See if value contains spaces\n",
+    "df2['Tag State'] = df2['Tag State'].str.strip()\n",
     "df2"
    ]
   },
@@ -635,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +735,7 @@
        "[103 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +851,7 @@
        "[103 rows x 1 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,183 +873,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tag No.</th>\n",
-       "      <th>Tag State</th>\n",
-       "      <th>Tag Date</th>\n",
-       "      <th>Report State</th>\n",
-       "      <th>Report Country</th>\n",
-       "      <th>Report Date</th>\n",
-       "      <th>Miles</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>RN109</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>9/16/97</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>3//98</td>\n",
-       "      <td>1995.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NT910</td>\n",
-       "      <td>ND</td>\n",
-       "      <td>8/30/97</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>3//98</td>\n",
-       "      <td>1909.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PB278</td>\n",
-       "      <td>MI</td>\n",
-       "      <td>9/5/97</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>3//98</td>\n",
-       "      <td>1826.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NH341</td>\n",
-       "      <td>MN</td>\n",
-       "      <td>9/1/97</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>3//98</td>\n",
-       "      <td>1788.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SA533</td>\n",
-       "      <td>OH</td>\n",
-       "      <td>9/12/97</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>2/1/98</td>\n",
-       "      <td>1787.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>NB344</td>\n",
-       "      <td>IA</td>\n",
-       "      <td>9/17/97</td>\n",
-       "      <td>IA</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>9/20/97</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>RO322</td>\n",
-       "      <td>KS</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>10/17/97</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>DZ859</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>FL</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>2/18/98</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>071AB</td>\n",
-       "      <td>KS</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>2/16/98</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>LM896</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MICH</td>\n",
-       "      <td>MEXICO</td>\n",
-       "      <td>3//98</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>103 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Tag No. Tag State Tag Date Report State Report Country Report Date   Miles\n",
-       "0     RN109        PA  9/16/97         MICH         MEXICO       3//98  1995.0\n",
-       "1     NT910        ND  8/30/97         MICH         MEXICO       3//98  1909.0\n",
-       "2     PB278        MI   9/5/97         MICH         MEXICO       3//98  1826.0\n",
-       "3     NH341        MN   9/1/97         MICH         MEXICO       3//98  1788.0\n",
-       "4     SA533        OH  9/12/97         MICH         MEXICO      2/1/98  1787.0\n",
-       "..      ...       ...      ...          ...            ...         ...     ...\n",
-       "98    NB344        IA  9/17/97           IA            USA     9/20/97     1.0\n",
-       "99    RO322        KS      NaN           TX            USA    10/17/97     NaN\n",
-       "100   DZ859        PA      NaN           FL            USA     2/18/98     NaN\n",
-       "101   071AB        KS      NaN           TX            USA     2/16/98     NaN\n",
-       "102   LM896        TX      NaN         MICH         MEXICO       3//98     NaN\n",
-       "\n",
-       "[103 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df4 = pd.concat([df, df2, df3, add_country], axis=1)\n",
     "df4.drop(['Where Tagged', 'Where Recovered', 'report_city', 'tag_city'], axis=1, inplace=True)\n",
     "df5 = df4[['Tag No.','Tag State', 'Tag Date', 'Report State', 'Report Country', 'Report Date', 'Miles']]\n",
-    "new_table = df5.copy()\n",
-    "new_table"
+    "new_table = df5.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final check to make sure there are no unwanted spaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_table.loc[new_table['Report State'].str.contains(r'\\s'), 'Report State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag State'].str.contains(r'\\s'), 'Tag State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s'), 'Tag No.'].value_counts()\n",
+    "# new_table.loc[new_table['Report Country'].str.contains(r'\\s'), 'Report Country'].value_counts()"
    ]
   },
   {
@@ -1067,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +927,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
