--- a/Data/Monarchs_1995_cleanup.ipynb
+++ b/Data/Monarchs_1995_cleanup.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect(\"Monarchs1996.db\")"
+    "db = sqlite3.connect(\"Monarchs1995.db\")"
    ]
   },
   {
@@ -37,10 +37,10 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"1996 Season Summary.csv\")\n",
+    "df = pd.read_csv(\"1995 Season Summary.csv\")\n",
     "\n",
     "        #convert pandas to SQL table\n",
-    "df.to_sql(\"monarchs1996\", db, if_exists=\"replace\")\n",
+    "df.to_sql(\"monarchs1995\", db, if_exists=\"replace\")\n",
     "\n",
     "os.getcwd()"
    ]
@@ -285,7 +285,7 @@
     }
    ],
    "source": [
-    "data_type = pd.read_sql('SELECT * FROM PRAGMA_TABLE_INFO(\"monarchs1996\")', db)\n",
+    "data_type = pd.read_sql('SELECT * FROM PRAGMA_TABLE_INFO(\"monarchs1995\")', db)\n",
     "data_type"
    ]
   },
@@ -1113,7 +1113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_csv(\"Monarchs1996.csv\")"
+    "#new_table.to_csv(\"Monarchs1995.csv\")"
    ]
   }
  ],
