--- a/Data/Monarchs_1997_cleanup.ipynb
+++ b/Data/Monarchs_1997_cleanup.ipynb
@@ -896,10 +896,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new_table.loc[new_table['Report State'].str.contains(r'\\s'), 'Report State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag State'].str.contains(r'\\s'), 'Tag State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s'), 'Tag No.'].value_counts()\n",
-    "# new_table.loc[new_table['Report Country'].str.contains(r'\\s'), 'Report Country'].value_counts()"
+    "# new_table.loc[new_table['Report State'].str.contains(r'\\s', na=False), 'Report State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag State'].str.contains(r'\\s', na=False), 'Tag State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s', na=False), 'Tag No.'].value_counts()\n",
+    "# new_table.loc[new_table['Report Country'].str.contains(r'\\s', na=False), 'Report Country'].value_counts()"
    ]
   },
   {
